# bob

./: .deepsource.toml  .dockerignore  .gitignore  .rustfmt.toml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  I  LICENSE  Makefile.toml  README.md  bob.norg  rust-toolchain.toml  test.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature-request.yml  03-docs-problem.yml  04-build-problem.yml  config.yml
.github/workflows/: build-native_tls.yml  build.yml  build.yml.bak  cd.yml  ci.yml  format.yml  main.yml  rust.yml  test.yaml
env/: env.fish  env.sh
resources/tapes/: demo.tape
scripts/: install.ps1  install.sh  test_proxy.sh
src/: cli.rs  config.rs  consts.rs  github_requests.rs  main.rs  models.rs
src/enums/: mod.rs
src/handlers/: erase_handler.rs  install_handler.rs  list_handler.rs  list_remote_handler.rs  mod.rs  rollback_handler.rs  run_handler.rs  sync_handler.rs  uninstall_handler.rs  update_handler.rs  use_handler.rs
src/helpers/: checksum.rs  directories.rs  filesystem.rs  mod.rs  processes.rs  sync.rs  system.rs  unarchive.rs
src/helpers/version/: mod.rs  nightly.rs  types.rs
src/models/: mod.rs
src/modules/: cli.rs  erase_handler.rs  expand_archive.rs  fs.rs  install_handler.rs  ls_handler.rs  mod.rs  rollback_handler.rs  sync_handler.rs  uninstall_handler.rs  use_handler.rs  utils.rs
