[package]
name         = "bob-nvim"
edition      = "2024"
version      = "4.1.5"
description  = "A version manager for neovim"
readme       = "README.md"
keywords     = ["neovim", "version-manager"]
categories   = ["command-line-utilities"]
license      = "MIT"
repository   = "https://github.com/MordechaiHadad/bob"
rust-version = "1.85"


[[bin]]
path              = "src/main.rs"
name              = "bob"
proc-macro        = false
required-features = []


[features]
default    = ["rustls-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]


[dependencies]
anyhow                = "1.0.52"
async-recursion       = "1.0.2"
chrono                = { version = "0.4.23", features = ["serde"] }
clap_complete         = "4.1"
clap_complete_nushell = "4.5.8"
clap                  = { version = "4.0.15", features = ["derive"] }
dialoguer             = { version = "0.11.0" }
futures-util          = { version = "0.3.14" }
indicatif             = "0.18.0"
regex                 = "1.5"
reqwest               = { version = "0.11", features = ["stream", "rustls-tls"] }
semver                = "1.0.22"
serde_json            = "1.0"
serde                 = { version = "1.0", features = ["derive"] }
sha2                  = "0.10.8"
sysinfo               = "0.35.2"
tokio                 = { version = "1.16.1", features = ["full"] }
yansi                 = "0.5.1"
toml                  = "0.8.8"
tracing               = "0.1.41"
tracing-subscriber    = "0.3.20"
what-the-path         = "^0.1.3"


[target.'cfg(unix)'.dependencies.nix]
version  = "0.28.0"
features = ["signal"]

[target.'cfg(unix)'.dependencies]
flate2 = "1.0.26"
tar    = "0.4"

[target."cfg(windows)".dependencies]
winreg = "0.10.1"
zip    = "2.2.0"


[profile.dev]
opt-level     = 1
codegen-units = 256
incremental   = true

[profile.optimized]
inherits      = "release"
opt-level     = "z"
strip         = true
lto           = true
codegen-units = 1

[profile.dev.package."*"]
inherits      = "dev"
codegen-units = 1
incremental   = false

[profile.release.package."*"]
opt-level     = "z"
strip         = true
codegen-units = 1
incremental   = false

[profile.optimized.package."*"]
opt-level     = "z"
strip         = true
codegen-units = 1
incremental   = false
inherits      = "release"


[package.metadata.binstall]
pkg-url             = "{ repo }/releases/download/v{ version }/bob-{ target-family }-{ target-arch }{ archive-suffix }"
bin-dir             = "bob-{ target-family }-{ target-arch }/{ bin }{ binary-ext }"
pkg-fmt             = "zip"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/bob-macos-arm.{ archive-format }"
bin-dir = "bob-macos-arm/{ bin }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/bob-macos-x86_64.{ archive-format }"
bin-dir = "bob-macos-x86_64/{ bin }"
