[package]
name = "bob-nvim"
edition = "2024"
version = "4.1.6"
description = "A version manager for neovim"
readme = "README.md"
keywords = ["neovim", "version-manager"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/MordechaiHadad/bob"
rust-version = "1.85"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]

[dependencies]
anyhow = "1.0.52"
cfg-if = "1.0"
indicatif = "0.18.0"
rand = "0.8.5"
serde_json = "1.0"
yansi = "0.5.1"
async-recursion = "1.0.2"
clap_complete = "4.1"
toml = "0.8.8"
semver = "1.0.22"
sha2 = "0.10.8"
what-the-path = "^0.1.3"
sysinfo = "0.35.2"
clap_complete_nushell = "4.5.8"

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]
optional = false

[dependencies.clap]
version = "4.0.15"
features = ["derive"]
optional = false

[dependencies.dialoguer]
version = "0.11.0"
features = []
optional = false
default-features = false

[dependencies.futures-util]
version = "0.3.14"
features = []
optional = false
default-features = false

[dependencies.regex]
version = "1.5"
features = []
optional = false

[dependencies.reqwest]
version = "0.12"
features = ["stream", "rustls-tls"]
optional = false
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = false

[dependencies.tokio]
version = "1.16.1"
features = ["full"]
optional = false

[dependencies.tracing]
version = "0.1.41"
features = []
optional = false

[dependencies.tracing-subscriber]
version = "0.3.20"
optional = false

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(unix)'.dependencies.nix]
version = "0.28.0"
features = ["signal"]

[target.'cfg(unix)'.dependencies]
flate2 = "1.0.26"
tar = "0.4"

[target."cfg(windows)".dependencies]
winreg = "0.10.1"
zip = "2.2.0"


[[bin]]
path = "src/main.rs"
name = "bob"
proc-macro = false
required-features = []

[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true

[profile.optimized]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/bob-{ target-family }-{ target-arch }{ archive-suffix }"
bin-dir = "bob-{ target-family }-{ target-arch }/{ bin }{ binary-ext }"
pkg-fmt = "zip"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/bob-macos-arm.{ archive-format }"
bin-dir = "bob-macos-arm/{ bin }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/bob-macos-x86_64.{ archive-format }"
bin-dir = "bob-macos-x86_64/{ bin }"
